--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,14 +25,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests with coverage
-        run: npm test -- --coverage --watchAll=false
-
       - name: Check coverage
-        run: |
-          coverage=$(node -p "require('./coverage/coverage-summary.json').total.lines.pct")
-          echo "Coverage is $coverage%"
-          if (( $(echo "$coverage < 80" | bc -l) )); then
-            echo "Test coverage is below 80%, failing the job."
-            exit 1
-          fi
+        uses: ArtiomTr/jest-coverage-report-action@v2
