--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,3 +37,12 @@ jobs:
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
             prnumber: ${{ steps.findPr.outputs.number }}
+
+      - name: Run React
+        run: npm start
+
+      - name: Wait React
+        run: sleep 20
+
+      - name: Run Cypress tests
+        run: npx cypress run
