[FIX] little fix

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "jest": {
+    "roots": ["<rootDir>/src"],
+    "testPathIgnorePatterns": ["/node_modules/", "/cypress/"],
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
       ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
