--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,4 +45,4 @@ jobs:
         run: sleep 20
 
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npx cypress run --headless
