--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' 
+          node-version: '16'
 
       - name: Install dependencies
         run: npm install
@@ -45,4 +45,4 @@ jobs:
         run: sleep 20
 
       - name: Run Cypress tests
-        run: npx cypress run --headless
+        run: npx cypress run
