--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,5 +44,8 @@ jobs:
       - name: Wait React
         run: sleep 20
 
+      - name: Install Cypress
+        run: npm install cypress@13.15.0
+
       - name: Run Cypress tests
         run: npx cypress run
