--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,3 +49,20 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Rune ESLint
+        run: eslint src --ext .js
