--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -65,4 +65,4 @@ jobs:
         run: npm install
 
       - name: Rune ESLint
-        run: eslint src --ext .js
+        run: npm run eslint src --ext .js
