--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,12 +58,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "identity-obj-proxy": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^13.15.0",
     "eslint": "^8.57.1",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "^3.3.3",
     "web-vitals": "^2.1.4"
   }
