--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-    "presets": [
-      ["@babel/preset-react", {
+  "presets": [
+    [
+      "@babel/preset-react",
+      {
         "runtime": "automatic"
-     }], "@babel/preset-env"
-    ]
-  }
+      }
+    ],
+    "@babel/preset-env"
+  ]
+}
