--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
+    "css-mediaquery": "^0.1.2",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
