--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
     "css-mediaquery": "^0.1.2",
+    "is-plain-obj": "^4.1.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
