--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server {
   listen       80;
+  server_name nerdcode.fun www.nerdcode.fun;
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
