--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,7 +48,7 @@ jobs:
         run: npm install cypress@13.15.0
 
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npx cypress run --headed
 
   lint:
     runs-on: ubuntu-latest
