--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remix-run/router": "^1.21.0",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
     "css-mediaquery": "^0.1.2",
