--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bugsnag/browser-performance": "^2.10.1",
+    "@bugsnag/js": "^8.1.2",
+    "@bugsnag/plugin-react": "^8.1.1",
     "@remix-run/router": "^1.21.0",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
