--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Add Secret
+        run: |
+          touch .env
+          echo ${{secrets.SECRET}} >> .env
+        
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
