--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
