--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.21.5",
     "css-mediaquery": "^0.1.2",
     "is-plain-obj": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
