--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
     "css-mediaquery": "^0.1.2",
+    "date-fns": "^4.1.0",
     "is-plain-obj": "^4.1.0",
     "js-cookie": "^3.0.5",
     "mobx": "^6.13.5",
