--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@bugsnag/browser-performance": "^2.10.1",
     "@bugsnag/js": "^8.1.2",
     "@bugsnag/plugin-react": "^8.1.1",
+    "@faker-js/faker": "^9.4.0",
     "@remix-run/router": "^1.21.0",
     "@uiw/react-textarea-code-editor": "^3.1.0",
     "antd": "^5.21.5",
