--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-mediaquery": "^0.1.2",
     "date-fns": "^4.1.0",
     "is-plain-obj": "^4.1.0",
+    "jest-worker": "^29.7.0",
     "js-cookie": "^3.0.5",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
